# fetch_mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  nginx.conf  pyproject.toml  requirements.txt
src/mcp_server_fetch/: __init__.py  __main__.py  extractor.py  fetcher.py  robots.py  server.py  transport.py
tests/: test_extractor.py  test_fetcher.py  test_integration.py  test_robots.py  test_server.py
