[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-fetch"
version = "0.1.0"
description = "A Model Context Protocol server for fetching web content as Markdown"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "readabilipy>=0.3.0",
    "markdownify>=0.14.0",
    "protego>=0.4.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-server-fetch = "mcp_server_fetch.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_fetch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
